logs/Slang/chapter-5/5.6--wrong-identifiers.sv.log
name: wrong-identifiers
description: Identifiers that should not be accepted
should_fail: 1
tags: 5.6
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6--wrong-identifiers.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6--wrong-identifiers.sv:8:6: error: expected declarator
  reg $dollar;
     ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6--wrong-identifiers.sv:8:7: error: expected member
  reg $dollar;
      ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6--wrong-identifiers.sv:9:6: error: expected declarator
  reg 0number;
     ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6--wrong-identifiers.sv:9:7: error: expected member
  reg 0number;
      ^
